--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <meta property="og:title" content="Tales From Earth 3000" />
   <meta property="og:description" content="“Tales From Earth 3000.”" />
-  <meta property="og:image" content="https://entertherealworld.xyz/banner.jpeg" />
+  <meta property="og:image" content="https://entertherealworld.com/banner.jpeg" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="twitter:title" content="Tales From Earth 3000" />
   <meta property="twitter:description" content="“Tales From Earth 3000”" />
-  <meta property="twitter:image" content="https://futurumterrae.xyz/banner.jpg" />
+  <meta property="twitter:image" content="https://futurumterrae.com/banner.jpg" />
   <title>Tales From Earth 3000</title>
 </head>
 
