--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,18 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Tales From Earth 3000" />
+  <meta name="description" content="Tales From Earth 2399" />
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <meta property="og:title" content="Tales From Earth 3000" />
-  <meta property="og:description" content="“Tales From Earth 3000.”" />
-  <meta property="og:image" content="https://entertherealworld.com/banner.jpeg" />
+  <meta property="og:title" content="Tales From Earth 2399" />
+  <meta property="og:description" content="“Tales From Earth 2399.”" />
+  <meta property="og:image" content="https://futurumterrae.com/earth in 2399.png" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta property="twitter:title" content="Tales From Earth 3000" />
-  <meta property="twitter:description" content="“Tales From Earth 3000”" />
-  <meta property="twitter:image" content="https://futurumterrae.com/banner.jpg" />
-  <title>Tales From Earth 3000</title>
+  <meta property="twitter:title" content="Tales From Earth 2399" />
+  <meta property="twitter:description" content="“Tales From Earth 2399" />
+  <meta property="twitter:image" content="https://futurumterrae.com/earth in 2399.png" />
+  <title>Tales From Earth 2399</title>
 </head>
 
 <body>
