--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Tales From Earth 2399" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+    <meta property="og:title" content="Tales From Earth 2399" />
+    <meta property="og:description" content="“Tales From Earth 2399.”" />
+    <meta
+      property="og:image"
+      content="https://futurumterrae.com/earth in 2399.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Tales From Earth 2399" />
+    <meta property="twitter:description" content="“Tales From Earth 2399" />
+    <meta
+      property="twitter:image"
+      content="https://futurumterrae.com/earth in 2399.png"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Tales From Earth 2399</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Tales From Earth 2399" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <meta property="og:title" content="Tales From Earth 2399" />
-  <meta property="og:description" content="“Tales From Earth 2399.”" />
-  <meta property="og:image" content="https://futurumterrae.com/earth in 2399.png" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta property="twitter:title" content="Tales From Earth 2399" />
-  <meta property="twitter:description" content="“Tales From Earth 2399" />
-  <meta property="twitter:image" content="https://futurumterrae.com/earth in 2399.png" />
-  <title>Tales From Earth 2399</title>
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
